--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,39 @@
-version: '3.8'
+version: '3'
 
 services:
-  php:
-    container_name: php
-    build:
-      context: ./php
-    ports:
-      - '6401:9000'
-    volumes:
-      - ./app:/var/www/symfony_docker
-    depends_on:
-      - mysql
 
-  nginx:
-    container_name: nginx
-    image: nginx:stable-alpine
-    ports:
-      - '6400:80'
+  php:
+    image: ghcr.io/ld-web/php-apache:8.2
     volumes:
-      - ./app:/var/www/symfony_docker
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - php
-      - mysql
+      - ./html:/var/www/html/
+    ports:
+      - '${PHP_PORT}:80' #.env
 
   mysql:
-    container_name: mysql
-    image: mysql:8.0
+    image: mysql:8.0.20
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: symfony_docker
-      MYSQL_USER: user
-      MYSQL_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD} #.env
+      MYSQL_USER: ${MYSQL_USER} #.env
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD} #.env
     ports:
-      - '6402:3306'
+      - '${MYSQL_PORT}:3306' #.env
     volumes:
-      - ./mysql:/var/lib/mysql
+      - ./.mysql/data:/var/lib/mysql
+      - ./.mysql/scripts:/scripts # TODO : gather more info on how to manage scripts the right way (dedicated folder)
 
   phpmyadmin:
-    container_name: phpmyadmin
     image: phpmyadmin/phpmyadmin:latest
     environment:
       PMA_ARBITRARY: 1
       PMA_HOST: mysql
-      PMA_PORT: 3306
-      PMA_USER: root
-      PMA_PASSWORD: root
+      PMA_PORT: ${MYSQL_PORT} #.env
+      PMA_USER: ${PMA_LOGIN} #.env
+      PMA_PASSWORD: ${PMA_PASSWORD} #.env
       UPLOAD_LIMIT: 512M
     ports:
-      - '6403:80'
+      - '${PMA_PORT}:80' #.env
     depends_on:
       - mysql
+
+  # TODO : Add adminer
