--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
 
-  php:
+  php-apache:
+    container_name: ${NAMESPACE}-php-apache
     image: ghcr.io/ld-web/php-apache:8.2
     volumes:
       - ./html:/var/www/html/
@@ -10,10 +11,10 @@ services:
       - '${PHP_PORT}:80' #.env
 
   mysql:
+    container_name: ${NAMESPACE}-mysql
     image: mysql:8.0.20
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD} #.env
       MYSQL_USER: ${MYSQL_USER} #.env
       MYSQL_PASSWORD: ${MYSQL_PASSWORD} #.env
     ports:
@@ -23,13 +24,14 @@ services:
       - ./.mysql/scripts:/scripts # TODO : gather more info on how to manage scripts the right way (dedicated folder)
 
   phpmyadmin:
+    container_name: ${NAMESPACE}-phpmyadmin
     image: phpmyadmin/phpmyadmin:latest
     environment:
       PMA_ARBITRARY: 1
       PMA_HOST: mysql
       PMA_PORT: ${MYSQL_PORT} #.env
-      PMA_USER: ${PMA_LOGIN} #.env
-      PMA_PASSWORD: ${PMA_PASSWORD} #.env
+      PMA_USER: ${MYSQL_USER} #.env
+      PMA_PASSWORD: ${MYSQL_PASSWORD} #.env
       UPLOAD_LIMIT: 512M
     ports:
       - '${PMA_PORT}:80' #.env
