--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
+# Restart the containers if you change any of these values (make up)
+
 NAMESPACE=base-container
 
 # MYSQL
-
-MYSQL_USER=user
-MYSQL_PASSWORD=password
+MYSQL_ROOT_PASSWORD=rootPassword
 
 # PORTS
-
 PHP_PORT=80
 MYSQL_PORT=3306
 PMA_PORT=8080
+ADM_PORT=8081
