--- a/.env
+++ b/.env
@@ -1,11 +1,15 @@
-# Restart the containers if you change any of these values (make up)
+# Restart the containers if you change any of these values (make up).
 
+# The container's prefix, replace it with your project's name.
 NAMESPACE=base-container
 
-# MYSQL
+# The password used to connect to mysql via phpmyadmin, adminer or the terminal.
+# You probably will never have to type it
 MYSQL_ROOT_PASSWORD=rootPassword
 
 # PORTS
+# 80 : default http requests port
+# 443 : default https requests port
 PHP_PORT=80
 MYSQL_PORT=3306
 PMA_PORT=8080
