--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@
 NAMESPACE=base-container
 
 # The password used to connect to mysql via phpmyadmin, adminer or the terminal.
-# You probably will never have to type it
+# You probably will never have to type it.
 MYSQL_ROOT_PASSWORD=rootPassword
 
-# PORTS
-# 80 : default http requests port
-# 443 : default https requests port
+# The ports used to access the containers.
+# 80 : default http requests port.
+# 443 : default https requests port.
 PHP_PORT=80
 MYSQL_PORT=3306
 PMA_PORT=8080
